--- a/mygym/src/main/resources/application.properties
+++ b/mygym/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.port=9001
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+spring.application.name= mygym
