--- a/eureka/src/main/resources/application.properties
+++ b/eureka/src/main/resources/application.properties
@@ -2,3 +2,6 @@ server.port = 8761
 spring.application.name= eureka
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+spring.boot.admin.client.url=http://localhost:9090
+management.endpoints.web.exposure.include=*
+management.endpoints.healt.show-details= always
