--- a/eureka/pom.xml
+++ b/eureka/pom.xml
@@ -23,6 +23,12 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-starter-client</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+
 
 	</dependencies>
 
