--- a/mygym/pom.xml
+++ b/mygym/pom.xml
@@ -80,6 +80,12 @@
 			<version>1.6.14</version>
 		</dependency>
 
+		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-starter-client</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
