--- a/mygym/src/main/resources/application.properties
+++ b/mygym/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.port=9001
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name= mygym
+spring.boot.admin.client.url=http://localhost:9090
+management.endpoints.web.exposure.include=*
+management.endpoints.healt.show-details= always
