--- a/eureka/src/main/resources/application.properties
+++ b/eureka/src/main/resources/application.properties
@@ -4,4 +4,4 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 spring.boot.admin.client.url=http://localhost:9090
 management.endpoints.web.exposure.include=*
-management.endpoints.healt.show-details= always
+management.endpoints.health.show-details= always
