--- a/mygym/src/main/resources/application.properties
+++ b/mygym/src/main/resources/application.properties
@@ -9,4 +9,4 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name= mygym
 spring.boot.admin.client.url=http://localhost:9090
 management.endpoints.web.exposure.include=*
-management.endpoints.healt.show-details= always
+management.endpoint.health.show-details=always
