--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,11 @@
             <version>3.0.4</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-starter-client</artifactId>
+            <version>2.7.10</version>
+        </dependency>
 
 
     </dependencies>
