--- a/eureka/src/main/resources/application.properties
+++ b/eureka/src/main/resources/application.properties
@@ -5,3 +5,4 @@ eureka.client.fetch-registry=false
 spring.boot.admin.client.url=http://localhost:9090
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+spring.boot.admin.client.instance.service-url= http://localhost:9090
