--- a/admin/src/main/resources/application.properties
+++ b/admin/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name= admin
-eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
 server.port = 9090
+spring.security.user.name=admin
+spring.security.user.password=admin
+spring.boot.admin.server.enabled=true
+spring.boot.admin.client.instance.service-url=http://localhost:9090
