--- a/admin/src/main/resources/application.properties
+++ b/admin/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name= admin
-eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka
 server.port = 9090
 spring.security.user.name=admin
 spring.security.user.password=admin
