--- a/admin/src/main/resources/application.properties
+++ b/admin/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name= admin
 eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
 server.port = 9090
-
+spring.boot.admin.client.url=http://localhost:9090
+spring.boot.admin.client.instance.service-url=http://localhost:9090
