--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <java.version>17</java.version>
         <spring-cloud.version>2021.0.5</spring-cloud.version>
         <spring-cloud-starter.version>3.1.4</spring-cloud-starter.version>
+        <spring-boot-admin.version>2.7.4</spring-boot-admin.version>
     </properties>
     <modules>
         <module>mygym</module>
@@ -42,9 +43,8 @@
         </dependency>
 
         <dependency>
-            <groupId>de.codecentric</groupId>
-            <artifactId>spring-boot-admin-starter-client</artifactId>
-            <version>2.7.10</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
 
