Implementazione spring cloud config

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>mygym</module>
         <module>eureka</module>
         <module>admin</module>
+        <module>configserver</module>
     </modules>
 
     <dependencies>
