--- a/admin/src/main/resources/application.properties
+++ b/admin/src/main/resources/application.properties
@@ -3,3 +3,4 @@ eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
 server.port = 9090
 spring.boot.admin.client.url=http://localhost:9090
 spring.boot.admin.client.instance.service-url=http://localhost:9090
+spring.config.import=optional:configserver:http://localhost:8888
