--- a/configserver/src/main/resources/application-native.properties
+++ b/configserver/src/main/resources/application-native.properties
@@ -1,3 +1,4 @@
+spring.application.name=config-server
 server.port=8888
 spring.cloud.config.server.native.searchLocations=file:///E:/IntelliJRepository/MyGymCloud/config-repo
 spring.cloud.config.server.bootstrap=true
