--- a/mygym/src/main/resources/application.properties
+++ b/mygym/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.boot.admin.client.url=http://localhost:9090
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 spring.boot.admin.client.instance.service-url=http://localhost:9090
-
+spring.config.import=optional:configserver:http://localhost:8888
 
 
